jellyfin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: jellyfin
  template:
    metadata:
      labels:
        name: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8096
              hostPort: 8096
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            tcpSocket:
              port: http
          volumeMounts:
            - mountPath: /config
              name: jellyfin-pvc-config
            - mountPath: /data
              name: jellyfin-pvc-data
          securityContext:
            privileged: true
      restartPolicy: Always
      volumes:
        - name: jellyfin-pvc-config
          persistentVolumeClaim:
            claimName: jellyfin-pvc-config
        - name: jellyfin-pvc-data
          persistentVolumeClaim:
            claimName: jellyfin-pvc-data
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                    - luna
