couchdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb-svc
  namespace: couchdb
spec:
  type: ClusterIP
  selector:
    name: couchdb
  ports:
    - name: "5984"
      port: 5984
      targetPort: 5984
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: couchdb
  namespace: couchdb
spec:
  selector:
    matchLabels:
      name: couchdb
  replicas: 1
  template:
    metadata:
      labels:
        name: couchdb
        namespace: couchdb
    spec:
      containers:
        - name: couchdb
          image: couchdb:3.3.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5984
              protocol: TCP
          volumeMounts:
            - name: couchdb-pvc
              mountPath: /opt/couchdb/data
            - name: tmp-config
              mountPath: /opt/couchdb/etc/local.d/
      restartPolicy: Always
      volumes:
        - name: couchdb-pvc
          persistentVolumeClaim:
            claimName: couchdb-pvc
        - name: couchdb-config
          configMap:
            name: couchdb-config
            items:
              - key: docker.ini
                path: docker.ini
        - name: tmp-config
          emptyDir: {}
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - mars
