postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
  labels:
    name: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: postgres
spec:
  type: ClusterIP
  selector:
    name: postgres
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: postgres
spec:
  selector:
    matchLabels:
      name: postgres
  replicas: 1
  template:
    metadata:
      labels:
        name: postgres
        namespace: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: postgres-pvc
              mountPath: /var/lib/postgresql/data
      restartPolicy: Always
      volumes:
        - name: postgres-pvc
          persistentVolumeClaim:
            claimName: postgres-pvc
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - mars
