redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    name: redis
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: default
spec:
  selector:
    matchLabels:
      name: redis
  replicas: 1
  template:
    metadata:
      labels:
        name: redis
        namespace: default
    spec:
      containers:
        - name: redis
          image: redis:7.2.3
          imagePullPolicy: IfNotPresent
          args:
            - "--save"
            - "900"
            - "1"
          ports:
            - containerPort: 6379
              protocol: TCP
          volumeMounts:
            - name: redis-pvc
              mountPath: /data
      restartPolicy: Always
      volumes:
        - name: redis-pvc
          persistentVolumeClaim:
            claimName: redis-pvc
