suspish.yaml
apiVersion: v1
kind: Service
metadata:
  name: suspish-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    name: suspish
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suspish
  namespace: default
spec:
  selector:
    matchLabels:
      name: suspish
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: suspish
        namespace: default
    spec:
      containers:
        - name: suspish
          image: st3v3nmw/suspish:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
      restartPolicy: Always
