ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cauldron
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - hosts:
        - cauldron.stephenmwangi.com
        - couchdb.stephenmwangi.com
      secretName: infra-svc-ingress-tls
  rules:
    - host: couchdb.stephenmwangi.com
      http:
        paths:
          - backend:
              service:
                name: couchdb-svc
                port:
                  number: 5984
            path: /
            pathType: Prefix
